# RsTest

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  RsTest.sln  RsTest.vcxproj  RsTest.vcxproj.filters  build.py  imgui.ini  scene.shader
include/: app.hpp  camera.hpp  control.hpp  lightsource.hpp  object.hpp  scene.hpp  shape.hpp  texture.hpp  utils.hpp  vec3.hpp
src/: app.cpp  camera.cpp  control.cpp  lightsource.cpp  main.cpp  object.cpp  scene.cpp  shape.cpp  texture.cpp  utils.cpp
src/vendors/: imgui_impl_glfw.cpp  imgui_tables.cpp
